# DataFinderAgentOS

./: .editorconfig  .gitignore  CLAUDE.md  README.md  _tcheck.py  app.py  biome.json  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  task.txt  temp_check.js  temp_check3.js  temp_check_final.js  tree.txt
app/: __init__.py
app/agents/: agent_loop.py  code_sandbox.py  concurrent_executor.py  task_agent.py  tool_executor.py  tool_registry.py  tool_reviewer.py  watchtower_agent.py
app/controllers/: __init__.py  admin.py  api_key.py  ask.py  auth.py  base.py  chat.py  db_migration.py  deep.py  digital_twin.py  employee.py  home.py  model_engine.py  permissions.py  screen.py  session_mgr.py  settings.py  skill.py  warehouse.py  watchtower.py  watchtower_collect.py
app/models/: __init__.py  admin.py  api_key.py  chat.py  crypto.py  db.py  db_ddl.py  db_migration.py  db_switcher.py  deep.py  digital_twin.py  employee.py  errors.py  intent_router.py  model_client.py  model_engine.py  rate_limit.py  secrets_store.py  skill.py  skill_dispatcher.py  sql_guard.py  user.py  validators.py  (+3 more)
docs/: audit-report-v2.md  audit-report.md  basePrompt.md  codingPrompt.md  development.md  requirementPrompt.md
scripts/: check_split_tags.py  check_templates.py  fix_split_tags.py  probe_weather.py  test_json_repair.py  test_watchtower_sources.py
test/: test_chat_repo.py  test_crypto.py  test_db.py  test_db_ddl.py  test_db_switcher.py  test_skill_dispatcher.py  test_sql_guard.py  test_validators.py  test_watchtower_scraper.py
(+41 files in other folders)
