[project]
name = "datafinderagentos"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tornado>=6.4",
    "httpx>=0.27",
    "reportlab>=4.2",
    "pymysql>=1.1",
    "ruff>=0.15.17",
    "cryptography>=49.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
